hphp/test/quick/fc_enum_3.php.expectf

Fatal error: Cannot instantiate enum Bar in %s on line 12
